# ni

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/ni_codegen/: Cargo.toml
crates/ni_compiler/: Cargo.toml
crates/ni_error/: Cargo.toml
crates/ni_fmt/: Cargo.toml
crates/ni_lexer/: Cargo.toml
crates/ni_lint/: Cargo.toml
crates/ni_lsp/: Cargo.toml
crates/ni_lsp/src/: analysis.rs  backend.rs  completion.rs  definition.rs  document.rs  hover.rs  main.rs  symbols.rs
crates/ni_parser/: Cargo.toml
crates/ni_repl/: Cargo.toml
crates/ni_repl/src/: main.rs  tests.rs
crates/ni_repl/tests/fixtures/: circular_a.ni  circular_b.ni  classes_mod.ni  closures_mod.ni  cross_ref.ni  defaults_mod.ni  enums_mod.ni  inheritance_mod.ni  instance_mod.ni  math_utils.ni  module_import_bug1.ni  module_import_bug2.ni  module_import_bug3.ni  module_import_lib.ni
crates/ni_runtime/: Cargo.toml
crates/ni_vm/: Cargo.toml
docs/: index.md  ni-for-ai.md
docs/guide/: 01-getting-started.md  02-variables-and-types.md  03-control-flow.md  04-functions.md  05-collections.md  06-classes.md  07-error-handling.md  08-modules.md  09-testing.md  10-coroutines.md
docs/internals/: async.md  codegen-conformance-todo.md  codegen.md  embedding.md  grammar.md  vm.md
editors/vscode/: language-configuration.json  package.json
examples/: classes.ni  closures.ni  coffee.ni  comprehensive.ni  debug_class.ni  fibonacci.ni  hello.ni  simple_class.ni  test_break.ni  test_break2.ni  test_break3.ni  test_break4.ni  test_break5.ni  test_break6.ni
examples/holy_grail/: quest.ni
(+61 files in other folders)
