[package]
name = "ni_repl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ni"
path = "src/main.rs"

[dependencies]
ni_error = { path = "../ni_error" }
ni_lexer = { path = "../ni_lexer" }
ni_parser = { path = "../ni_parser" }
ni_compiler = { path = "../ni_compiler" }
ni_vm = { path = "../ni_vm" }
ni_codegen = { path = "../ni_codegen" }
ni_lint = { path = "../ni_lint" }
ni_fmt = { path = "../ni_fmt" }
[lints]
workspace = true
